<resources>
    <string name="app_name">MIU Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">example@manarat.ac.bd</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="menu_chats">Chats</string>
    <string name="menu_portal">Portal</string>
    <string name="menu_status">Status</string>
    <string name="menu_busSchedule">Bus Schedule</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_news">News</string>

    <string name="example_manarat_ac_bd">example@manarat.ac.bd</string>
    <string name="password">Password</string>
    <string name="click_for_sign_up">Click For Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="name">getUserName</string>
    <string name="email">getEmail</string>
    <string name="reload">Reload</string>
</resources>