<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chats"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_portal"
            android:title="@string/menu_portal" />
        <item
            android:id="@+id/nav_busSchedule"
            android:title="@string/menu_busSchedule" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_Settings" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out" />
    </group>
</menu>